# hmpt-code

./: .gitignore  .pre-commit-config.yaml  README.md  SANDBOX.md  noxfile.py  pyproject.toml
chapter01-installing-python/: README.md  bash.sh  fish.sh  zsh.sh
chapter02-python-environments/: hello.py  pydoc3  standard-library-modules.py  third-party-packages.py
chapter03-python-packages/: README.md  pyproject.toml  random_wikipedia_article.py  test_wikipedia_viewer.py
chapter03-python-packages/src/random_wikipedia_article/: __init__.py
chapter04-dependency-management/: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
chapter04-dependency-management/requirements/: base.txt  dev.txt  docs.txt  tests.in  tests.txt
chapter04-dependency-management/src/random_wikipedia_article/: __init__.py  __main__.py
chapter04-dependency-management/tests/: test_random_wikipedia_article.py
chapter05-managing-projects-with-poetry/: Dockerfile  pyproject.toml  requirements.txt
chapter05-managing-projects-with-poetry/src/random_wikipedia_article/: __init__.py
chapter06-testing-with-pytest/: dev-requirements.txt  pyproject.toml
chapter06-testing-with-pytest/src/random_wikipedia_article/: __init__.py
chapter06-testing-with-pytest/tests/: conftest.py  test_main.py
chapter07-measuring-coverage-with-coverage-py/: README.md  coverage.sh  dev-requirements.txt  pyproject.toml
chapter07-measuring-coverage-with-coverage-py/src/random_wikipedia_article/: __init__.py
chapter08-automation-with-nox/: constraints.txt  dev-requirements.txt  noxfile.py  py37-dev-requirements.txt  pyproject.toml
chapter08-automation-with-nox/constraints/: python3.12-darwin-arm64.txt  python3.7-darwin-arm64.txt
chapter08-automation-with-nox/src/random_wikipedia_article/: __init__.py  __main__.py
chapter08-automation-with-nox/tests/: test_main.py
chapter09-linting-with-ruff-and-pre-commit/: .pre-commit-config.yaml  bad.py  example.py  noxfile.py  pyproject.toml
chapter09-linting-with-ruff-and-pre-commit/constraints/: python3.10-darwin-arm64.txt  python3.11-darwin-arm64.txt  python3.12-darwin-arm64.txt  python3.7-darwin-arm64.txt  python3.8-darwin-arm64.txt  python3.9-darwin-arm64.txt
chapter09-linting-with-ruff-and-pre-commit/tests/: test_frobnicate.py  test_main.py
chapter10-using-types-for-safety-and-inspection/: .pre-commit-config.yaml  dataclasses2.py  duck.py  example.py  format_lines.py  noxfile.py  obscure.py  people.json  person.py  pyproject.toml  sqrt.py  tour.py
chapter10-using-types-for-safety-and-inspection/constraints/: python3.10-darwin-arm64.txt  python3.11-darwin-arm64.txt  python3.12-darwin-arm64.txt
chapter10-using-types-for-safety-and-inspection/src/random_wikipedia_article/: __init__.py
chapter10-using-types-for-safety-and-inspection/tests/: test_main.py
