[project]
name = "random-wikipedia-article"
dynamic = ["version"]

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[tool.hatch.version]
source = "vcs"
# Required because .git is one level up from the project directory.
raw-options.root = ".."

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
