[project]
name = "random-wikipedia-article"
version = "0.1"
description = "Display extracts from random Wikipedia articles"
readme = "README.md"
keywords = ["wikipedia"]
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment :: Fortune Cookies",
]
requires-python = ">=3.8"
dependencies = ["httpx[http2]>=0.27.0", "rich>=13.7.1"]

[project.optional-dependencies]
tests = [
    "pytest>=8.1.1",
    "pytest-httpserver>=1.0.10",
    "pytest-xdist>=3.6.1",
    "factory-boy>=3.3.0",
    "coverage[toml]",
]

[project.urls]
Homepage = "https://yourname.dev/projects/random-wikipedia-article"
Source = "https://github.com/yourname/random-wikipedia-article"
Issues = "https://github.com/yourname/random-wikipedia-article/issues"
Documentation = "https://readthedocs.io/random-wikipedia-article"

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[tool.coverage.run]
source = ["random_wikipedia_article", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
