[project]
name = "random-wikipedia-article"
version = "0.1"
description = "Display extracts from random Wikipedia articles"
readme = "README.md"
keywords = ["wikipedia"]
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment :: Fortune Cookies",
]
requires-python = ">=3.7"
dependencies = [
    "httpx[http2]>=0.24.1",
    "rich>=13.7.1",
    "importlib-metadata>=6.7.0; python_version < '3.8'",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.4.4",
    "pytest-httpserver>=1.0.6",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "coverage[toml]>=7.2.7",
]
lint = [
    "pre-commit>=2.21.0",
]

[project.urls]
Homepage = "https://yourname.dev/projects/random-wikipedia-article"
Source = "https://github.com/yourname/random-wikipedia-article"
Issues = "https://github.com/yourname/random-wikipedia-article/issues"
Documentation = "https://readthedocs.io/random-wikipedia-article"

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[tool.ruff]
src = ["chapter09-linting-with-ruff-and-pre-commit/src"]
preview = true
extend-exclude = ["chapter09-linting-with-ruff-and-pre-commit/example.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",    # flake8-annotations
    "COM812", # missing-trailing-comma
    "CPY001", # missing-copyright-notice
    "D",      # pydocstyle
    "PT001",  # pytest-fixture-incorrect-parentheses-style
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"chapter09-linting-with-ruff-and-pre-commit/*.py" = ["INP001"]  # implicit-namespace-package
"chapter09-linting-with-ruff-and-pre-commit/tests/*" = ["S101"] # assert

[tool.coverage.run]
source = ["random_wikipedia_article", "tests"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

