[project]
name = "random-wikipedia-article"
version = "0.1"
description = "Display extracts from random Wikipedia articles"
readme = "README.md"
keywords = ["wikipedia"]
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Games/Entertainment :: Fortune Cookies",
]
requires-python = ">=3.10"

[project.optional-dependencies]
tests = [
    "pytest>=8.2.0",
    "pytest-httpserver>=1.0.10",
    "pytest-xdist>=3.6.1",
    "factory-boy>=3.3.0",
    "coverage[toml]>=7.5.1",
]
lint = [
    "pre-commit>=3.7.1",
]

[project.urls]
Homepage = "https://yourname.dev/projects/random-wikipedia-article"
Source = "https://github.com/yourname/random-wikipedia-article"
Issues = "https://github.com/yourname/random-wikipedia-article/issues"
Documentation = "https://readthedocs.io/random-wikipedia-article"

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[tool.ruff.lint.per-file-ignores]
"obscure.py" = ["F821"]

[tool.coverage.run]
source = ["random_wikipedia_article", "tests"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

